--- a/ModelAggregation/TrendStatusGeneration.Rmd
+++ b/ModelAggregation/TrendStatusGeneration.Rmd
@@ -15,9 +15,6 @@ library(glue)
 library(english)
 library(stringi)
 
-# Function to maintain decimal rounding for use with formatC (below) when adding 'big mark' commas for larger values
-trunc2 <- function(x, d) trunc(x * 10 ^ d) / 10 ^ d
-
 knitr::opts_chunk$set(echo = FALSE)
 # Discrete aggregate results (water clarity + nutrients)
 disc_results <- openxlsx::read.xlsx("output/WQ_agg_results.xlsx") %>% 
@@ -55,6 +52,29 @@ coral_pc_results <- fread("../../SEACAR_Trend_Analyses/Coral/output/PercentCover
   as.data.table()
 oyster_results <- fread("../../SEACAR_Trend_Analyses/Oyster/output/Oyster_All_GLMM_Stats.txt")
 oyster_results[ParameterName!="Shell Height" & SizeClass=="", ]$SizeClass <- NA
+# Function to check and assign oyster trends
+checkOyTrends <- function(modelEstimate, lowConfidence, upConfidence){
+  increasing <- modelEstimate > 0
+  if(is.na(modelEstimate)){
+    trendPresent <- "no model"
+  } else {
+    trendPresent <- ifelse(lowConfidence < 0 & upConfidence < 0, "yes", 
+                           ifelse(lowConfidence > 0 & upConfidence > 0, "yes", "no"))    
+  }
+  trendStatus <- 0
+  if(trendPresent=="yes"){
+    trendStatus <- ifelse(increasing, 1, -1)
+  } else if(trendPresent=="no") {
+    trendStatus <- 0
+  } else {
+    trendStatus <- NA
+  }
+  return(trendStatus)
+}
+oyster_results %<>% rowwise() %>%
+  mutate(numericTrend = checkOyTrends(ModelEstimate, LowerConfidence, UpperConfidence)) %>%
+  as.data.table()
+# Check and assign coral trends
 checkTrends <- function(p, LME_Slope, SufficientData){
   if(SufficientData){
     if(is.na(LME_Slope)){
@@ -107,6 +127,9 @@ generate_acreage_statement <- function(ma, habitat, acreage){
         g_subset <- subset[LandCoverGroup==group, ]
         if(nrow(g_subset)>1){
           g_subset <- g_subset %>% filter(Analysis_Include_YN=="Y")
+        }
+        if(ma=="Kristin Jacobs Coral Aquatic Preserve"){
+          g_subset <- g_subset %>% filter(NumberOfYears>1)
         }
         
         minYear <- g_subset$MinYear
@@ -238,12 +261,13 @@ generate_disc_text <- function(data, indicator, ma){
     parameters[parameters %in% chla] <- "Chlorophyll a"
     p_display <- param_display(tolower(unique(parameters)))
     n_parameters <- length(unique(subset$ParameterName))  
+    n_parameters_display <- ifelse(n_parameters==1, glue("{n_parameters} parameter"), glue("{n_parameters} parameters"))
     if(indicator=="Nutrients"){
       sentence <- glue("Nutrient concentrations {trended} based on an aggregate model of total nitrogen and total phosphorus analyses results.")
       numericTrend <- unique(data$Trend)      
     } else if(indicator=="Water Clarity"){
       sentence <- glue(
-        "Water clarity {trended} between {time_period} based on an aggregate model of analyses results from {n_parameters} parameters.")
+        "Water clarity {trended} between {time_period} based on an aggregate model of analyses results from {n_parameters_display}.")
       numericTrend <- unique(data$Trend)      
     }
   }
@@ -296,7 +320,7 @@ generate_sav_text <- function(data, ma){
     # Trend
     trend <- ifelse(ma_sav_subset$Trend==1, "increased", 
                     ifelse(ma_sav_subset$Trend==-1, "decreased", 
-                           "showed no significant trend"))
+                           "showed no detectable change"))
     numericTrend <- ma_sav_subset$Trend
     minYear <- ma_sav_subset$minYear
     maxYear <- ma_sav_subset$maxYear
@@ -304,8 +328,8 @@ generate_sav_text <- function(data, ma){
   }
   sentence <- stri_replace_all_regex(
     sentence,
-    pattern = c("johnson's seagrass", "halophila spp.", "unidentified halophila"),
-    replacement = c("Johnson's seagrass", "<i>Halophila</i> spp.", "unidentified <i>Halophila</i>"),
+    pattern = c("johnson's seagrass", "halophila spp.", "unidentified halophila", "total sav"),
+    replacement = c("Johnson's seagrass", "<i>Halophila</i> spp.", "unidentified <i>Halophila</i>", "Total SAV"),
     vectorize = FALSE
   )
   # return(sentence)
@@ -407,7 +431,7 @@ generate_coral_text <- function(ma, ind){
     } else {
       trend <- ifelse(str_detect(coral_pc$Trend, "increasing"), "an increase", 
                       ifelse(str_detect(coral_pc$Trend, "decreasing"), "a decrease", 
-                             ifelse(str_detect(coral_pc$Trend, "No"), "no significant change")))
+                             ifelse(str_detect(coral_pc$Trend, "No"), "no detectable change")))
       numericTrend <- ifelse(str_detect(coral_pc$Trend, "increasing"), 1, 
                              ifelse(str_detect(coral_pc$Trend, "decreasing"), -1, 
                                     ifelse(str_detect(coral_pc$Trend, "No"), 0)))
@@ -454,26 +478,26 @@ generate_oyster_text <- function(ma, ind){
   ma_abrev <- MA_All[ManagedAreaName==ma, Abbreviation]
   oy_subset <- oyster_results[ManagedAreaName==ma & 
                                 ParameterName==ind & ShellType=="Live Oysters", ]
-  habtype <- ifelse(ma_abrev %in% c("ABAP","ANERR","YRMAP"), "Restored", "Natural")
+  # habtype <- ifelse(ma_abrev %in% c("ABAP","ANERR","YRMAP"), "Restored", "Natural")
+  habtype <- ifelse(ma_abrev %in% c("YRMAP"), "Restored", "Natural")
   oy_subset <- oy_subset[HabitatType==habtype]
   
   if(nrow(oy_subset)==0){
-    den_sentence <- "Insufficient data was available to assess long-term trends for density."
-    pct_sentence <- "Insufficient data was available to assess long-term trends for percent live."
-    sh_sentence <- "Insufficient data was available to estimate a size trend for live oysters."
-    
+    sentence <- glue("Data for {tolower(ind)} is needed for {ma_short}.")
+    den_sentence <- sentence
+    pct_sentence <- sentence
+    sh_sentence <- sentence    
   } else {
     if(nrow(oy_subset[SufficientData==FALSE]) == nrow(oy_subset)){
-      sentence <- glue("Data for {tolower(ind)} is needed for {ma_short}.")
-      den_sentence <- sentence
-      pct_sentence <- sentence
-      sh_sentence <- sentence  
+      den_sentence <- "Insufficient data was available to assess long-term trends for density."
+      pct_sentence <- "Insufficient data was available to assess long-term trends for percent live."
+      sh_sentence <- "Insufficient data was available to estimate a size trend for live oysters."
     } else {
       if(ind=="Shell Height"){
         t_oy_subset <- oy_subset %>% 
           filter(SufficientData==TRUE, SizeClass!="") %>% 
           group_by(HabitatType, ShellType, SizeClass, EarliestLiveDate, LatestLiveDate) %>% 
-          reframe(trend = ifelse(ModelEstimate>0, "an increase", "a decrease")) %>%
+          reframe(trend = ifelse(numericTrend>0, "an increase", ifelse(numericTrend<0, "a decrease", "no detectable change"))) %>%
           as.data.table()
         large_model <- nrow(t_oy_subset[!is.na(trend) & SizeClass==">75mm"])>0
         small_model <- nrow(t_oy_subset[!is.na(trend) & SizeClass=="25-75mm"])>0
@@ -485,7 +509,7 @@ generate_oyster_text <- function(ma, ind){
           trend <- t_oy_subset[HabitatType==habtype & SizeClass==">75mm", "trend"]
           minDate <- t_oy_subset[HabitatType==habtype & SizeClass==">75mm", "EarliestLiveDate"]
           maxDate <- t_oy_subset[HabitatType==habtype & SizeClass==">75mm", "LatestLiveDate"]
-          sh_sentence <- glue("Between {minDate} and {maxDate}, data showed {trend} in the shell height of ≥75mm live oysters within {ma_short} for {tolower(habtype)} reefs.")
+          sh_sentence <- glue("Between {minDate} and {maxDate}, data showed {trend} in the shell height of &#8805;75mm live oysters within {ma_short} for {tolower(habtype)} reefs.")
         } else if(small_model){
           # Smaller oyster trend
           trend <- t_oy_subset[HabitatType==habtype & !SizeClass==">75mm", "trend"]
@@ -498,13 +522,13 @@ generate_oyster_text <- function(ma, ind){
         t_oy_subset <- oy_subset %>% 
           filter(SufficientData==TRUE) %>% 
           group_by(HabitatType, ShellType, EarliestLiveDate, LatestLiveDate) %>% 
-          reframe(trend = ifelse(ModelEstimate>0, "an increase", "a decrease")) %>%
+          reframe(trend = ifelse(numericTrend>0, "an increase", ifelse(numericTrend<0, "a decrease", "no detectable change"))) %>%
           as.data.table()
         
         trend <- t_oy_subset[HabitatType==habtype, "trend"]
         minDate <- t_oy_subset[HabitatType==habtype, "EarliestLiveDate"]
         maxDate <- t_oy_subset[HabitatType==habtype, "LatestLiveDate"]
-        den_sentence <- glue("Live oyster density within {ma_short} has shown {trend} between {minDate} and {maxDate} for {tolower(habtype)} reefs.")
+        den_sentence <- glue("Live oyster density within {ma_short} showed {trend} between {minDate} and {maxDate} for {tolower(habtype)} reefs.")
         pct_sentence <- glue("Between {minDate} and {maxDate}, data showed {trend} in the proportion of live oysters within {ma_short} for {tolower(habtype)} reefs.")
         
       }
@@ -717,6 +741,8 @@ textResultsFinal$Website[textResultsFinal$ManagedAreaName=="St. Joseph Bay State
 
 textResultsFinal$Trend[(textResultsFinal$SufficientData==TRUE & is.na(textResultsFinal$Trend) & str_detect(textResultsFinal$Text, "increase"))] <- 1
 textResultsFinal$Trend[(textResultsFinal$SufficientData==TRUE & is.na(textResultsFinal$Trend) & str_detect(textResultsFinal$Text, "decrease"))] <- -1
+textResultsFinal$Trend[(textResultsFinal$SufficientData==TRUE & is.na(textResultsFinal$Trend) & 
+                          str_detect(textResultsFinal$Text, "no detectable change"))] <- 0
 # Statements with Insufficient Data receive a Trend value of 2
 textResultsFinal$Trend[textResultsFinal$SufficientData==FALSE] <- 2
 # Statements with Sufficient Data but un-tested trends (Species Richness plots [Nekton, Coral, CW]) receive a Trend value of 3
